[gd_scene load_steps=5 format=3 uid="uid://c0hd2l17aqi6c"]

[ext_resource type="Script" path="res://System/money_0.gd" id="1_im5ji"]
[ext_resource type="Texture2D" uid="uid://dfane85dxcncl" path="res://Art/money.png" id="1_pmnju"]

[sub_resource type="Animation" id="Animation_44t4l"]
resource_name = "Blinking"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jxox"]
_data = {
"Blinking": SubResource("Animation_44t4l")
}

[node name="Money0" type="RigidBody2D"]
z_index = 10
collision_layer = 0
collision_mask = 14
script = ExtResource("1_im5ji")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-7, -10, 7, -10, 7, 11, -7, 11)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_pmnju")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(0, 0.254464)
scale = Vector2(1.5, 0.886)
polygon = PackedVector2Array(-7, -17, 7, -17, 7, 18, -7, 18)

[node name="Expiration" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0jxox")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered" flags=18]
[connection signal="timeout" from="Expiration" to="." method="_on_expiration_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
